[package]
name = "subplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
sunk = "0.1.2"
dotenv = "0.15"
libmpv = "2.0"
md5 = "0.7.0"
rand = "0.8"
spinners = "2.0"
