[package]
name = "subplayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell (a.k.a. atareao) <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.18", features = ["full"]}
reqwest = "0.11"
roxmltree = "0.14"
dirs = "1.0.4"
rodio = "0.14"
md5 = "0.7.0"
rand = "0.8"
spinners = "2.0"

[[bin]]
name = "subplayer"
path = "src/main.rs"
